syntax = "proto3";


// client send it to aggregate server
message middle_output{
    int32 round = 1;
    bytes params_msg = 2;
}

message middle_grad{
    int32 client_rank = 1;
    bytes grad_msg = 2;
}


service LabelOwnerService {
  //  AggregateServer provides the interface, client remotes the call
  rpc top_forward(middle_output) returns (middle_grad);

}